# ascii-royale

./: Cargo.toml  DESIGN.md  LICENSE  PLAN.md  README.md
deploy/: bore-tunnel.service  boxd-tcp-request.md  royale-arena.service  royale-launcher  royale-ttyd.service  royale-web-launcher  sshd-hardening.conf  sshd-play.conf
examples/: capture_gif.rs
src/: main.rs
src/game/: bot.rs  items.rs  map.rs  mod.rs  state.rs  zone.rs
src/net/: client.rs  host.rs  lobby.rs  mod.rs  protocol.rs  web.rs
src/ui/: keys.rs  mod.rs  profile.rs  sound.rs  tui.rs
tests/: e2e.rs
