[package]
name = "ascii-royale"
version = "0.1.0"
edition = "2021"
description = "Terminal battle royale — peer-to-peer over iroh, no central server"
license = "MIT"

[dependencies]
anyhow = "1"
blake3 = "1.8.5"
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
futures-lite = "2.6.1"
iroh = "1.0.0-rc.1"
iroh-gossip = "0.100.0"
postcard = { version = "1", features = ["alloc", "use-std"] }
rand = "0.9"
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "layout-cache", "macros", "underline-color"] }
rodio = { version = "0.22.2", default-features = false, features = ["playback"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
ureq = "3.3.0"

[profile.release]
lto = true
strip = true

[dev-dependencies]
font8x8 = "0.3.1"
gif = "0.14.2"
